Propertiees added in swagger file
