# prifender/des.adapter.relational.sqlserverkerbores/src/main/java/com/prifender/des/adapter/relational/sqlserverkerbores/SqlServerKerboresDataSourceAdapter.java
@@ -6,6 +6,7 @@ import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.sql.Connection;
+import java.sql.DatabaseMetaData;
 import java.sql.DriverManager;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
@@ -291,7 +292,7 @@ public void getKrb5SystemCon(String realm,String adminHostName) {
 		return tableList;
 	}
 
-	public List<NamedType> getTableRelatedColumns(Connection con, String schemaName, String tableName) throws SQLException {
+	public List<NamedType> getTableRelatedColumns(Connection con, String schemaName, String tableName) throws SQLException, DataExtractionServiceException {
 		ResultSet rs = null;
 		PreparedStatement pstmt = null;
 		String columnsQuery = null;
@@ -308,10 +309,16 @@ public void getKrb5SystemCon(String realm,String adminHostName) {
 				while (rs.next()) {
 					NamedType attributeForColumn = new NamedType();
 					attributeForColumn.setName(rs.getString(1).replaceAll("\\[", "").replaceAll("\\]", ""));
-					Type typeForCoumn = new Type().kind(Type.KindEnum.VALUE)
-							.dataType(databaseUtilService.getDataType(rs.getString(2).toUpperCase()));
-					attributeForColumn.setType(typeForCoumn);
-					attributeList.add(attributeForColumn);
+					Type columnInfo = getColumnInfo(con,tableName,rs.getString(1).replaceAll("\\[", "").replaceAll("\\]", ""));
+					if(columnInfo != null){ 
+						Type typeForCoumn = new Type().kind(Type.KindEnum.VALUE)
+													   .dataType(databaseUtilService.getDataType(rs.getString(2).toUpperCase())) 
+													   .nullable(columnInfo.getNullable())
+													   .autoIncrement(columnInfo.getAutoIncrement())
+													   .size(columnInfo.getSize());
+					    attributeForColumn.setType(typeForCoumn);
+						attributeList.add(attributeForColumn);
+					 }
 				}
 			}
 		} finally {
@@ -320,7 +327,27 @@ public void getKrb5SystemCon(String realm,String adminHostName) {
 
 		return attributeList;
 	}
-
+	public Type getColumnInfo(Connection connection,String tableName,String columnName) throws DataExtractionServiceException{
+		Type type= new Type();
+		ResultSet resultSet = null;
+		try {
+			String dbName = tableName.split("\\.")[0].replaceAll("\\[", "").replaceAll("\\]", "");
+			String schema = tableName.split("\\.")[1].replaceAll("\\[", "").replaceAll("\\]", "");
+			String tabName = tableName.split("\\.")[2].replaceAll("\\[", "").replaceAll("\\]", "");
+			DatabaseMetaData meta = connection.getMetaData();
+			resultSet = meta.getColumns(dbName, schema, tabName,columnName);
+			if (resultSet.next()) {
+				type.setSize(resultSet.getInt("COLUMN_SIZE"));
+				type.setAutoIncrement(resultSet.getString("IS_AUTOINCREMENT").equals("YES") ? true : false);
+				type.setNullable(resultSet.getString("IS_NULLABLE").equals("YES") ? true : false); 
+			} 
+		} catch (SQLException e) {
+			throw new DataExtractionServiceException(new Problem().code("Error").message(e.getMessage()));
+		}finally{
+			databaseUtilService.closeSqlObject(resultSet);
+		}
+		return type;
+	} 
 	public List<Constraint> getTableRelatedFkInfo(Connection con, String schemaName, String tableName) throws SQLException {
 		ResultSet resultSet = null;
 		PreparedStatement preparedStatement = null;
@@ -362,7 +389,7 @@ public void getKrb5SystemCon(String realm,String adminHostName) {
 							if (isForeignKey) {
 								fkAttributes.add(resultSet.getString("referenced_column_name"));
 								pkOfFkAttributes.add(resultSet.getString("column_name"));
-								constraint.setTarget(resultSet.getString("referenced_object"));
+								constraint.setTarget(dbName+"."+resultSet.getString("type_schema")+"."+resultSet.getString("referenced_object"));
 							}
 						}
 						constraint.setAttributes(pkOfFkAttributes);
@@ -377,7 +404,6 @@ public void getKrb5SystemCon(String realm,String adminHostName) {
 
 		return constraintList;
 	}
-
 	public List<Constraint> getTableRelatedPkInfo(Connection con, String schemaName, String tableName) throws SQLException {
 		ResultSet resultSet = null;
 		PreparedStatement preparedStatement = null;
